texttrimmer functionality fixed by using visibility: hidden instead of display: none.

--- a/css/rollingarchives.css
+++ b/css/rollingarchives.css
@@ -167,10 +167,6 @@ div.trimmed .hentry.alt {
 	background: transparent;
 	}
 
-.firstpage #texttrimmer {
-	display: none;
-	}
-
 #texttrimmer {
 	position: absolute;
 	width: 100px;
@@ -179,11 +175,15 @@ div.trimmed .hentry.alt {
 	right: 60px;
 	}
 
+.firstpage #texttrimmer,
 .firstpage #pagetrackwrap {
 	visibility: hidden;
 	}
 
-.nthpage #pagetrackwrap {
+.nthpage #texttrimmer,
+.nthpage #pagetrackwrap,
+.lastpage #texttrimmer,
+.lastpage #pagetrackwrap {
 	visibility: visible;
 	}
 
